--- a/index.html
+++ b/index.html
@@ -1,153 +1,303 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bandit Driver</title>
+<!-- ===== BANDIT: CONTENT SECTIONS (PASTE ABOVE </body>) ===== -->
 
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+<section class="bandit-sections" aria-label="Bandit info sections">
+  <div class="section-wrap">
 
-    body{
-      background: #0b0b0f;
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-    }
+    <!-- What Bandit Is -->
+    <div class="panel">
+      <h2 class="panel-title">Bandit is a <span class="gold">Truck-Aware Co-Pilot</span>.</h2>
+      <p class="panel-sub">
+        Built for real drivers. Calm, fast, and focused — designed to reduce mental load, help you move smarter,
+        and keep you in control. No hype. Just utility.
+      </p>
 
-    /* subtle background polish (not cheesy) */
-    .bg-glow{
-      position: fixed;
-      inset: -40%;
-      background:
-        radial-gradient(circle at 30% 20%, rgba(255,180,0,0.14), transparent 45%),
-        radial-gradient(circle at 70% 70%, rgba(255,180,0,0.10), transparent 50%),
-        radial-gradient(circle at 50% 50%, rgba(255,255,255,0.05), transparent 55%);
-      filter: blur(30px);
-      pointer-events: none;
-    }
-
-    .wrap{
-      width: min(1700px, 98vw);
-      padding: 26px 18px 30px;
-      text-align: center;
-      position: relative;
-      z-index: 2;
-    }
-
-    .logo-frame{
-      background: rgba(255,255,255,0.02);
-      border: 1px solid rgba(255,255,255,0.06);
-      border-radius: 18px;
-      padding: 18px;
-      box-shadow: 0 24px 60px rgba(0,0,0,0.55);
-    }
-
-    img{
-      width: 100%;
-      max-height: 82vh;
-      object-fit: contain;
-      display: block;
-      margin: 0 auto;
-      border-radius: 12px;
-    }
-
-    .badges{
-      margin-top: 16px;
-      display: flex;
-      gap: 10px;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-
-    .badge{
-      padding: 10px 14px;
-      border-radius: 999px;
-      font-weight: 800;
-      letter-spacing: 0.10em;
-      text-transform: uppercase;
-      font-size: 12px;
-
-      background: rgba(255, 180, 0, 0.10);
-      border: 1px solid rgba(255, 180, 0, 0.45);
-      color: #ffd36a;
-      box-shadow: 0 10px 22px rgba(0,0,0,0.35);
-    }
-
-    /* Gold + black outline tagline */
-    .sub{
-      margin-top: 18px;
-      font-size: clamp(18px, 2.1vw, 28px);
-      font-weight: 900;
-      letter-spacing: 0.12em;
-      text-transform: uppercase;
-
-      background: linear-gradient(180deg, #fff3a6 0%, #ffd36a 20%, #ffb400 55%, #b87400 100%);
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-
-      -webkit-text-stroke: 2px rgba(0,0,0,0.95);
-      text-shadow:
-        0 2px 0 rgba(0,0,0,0.55),
-        0 10px 24px rgba(0,0,0,0.60);
-      position: relative;
-      display: inline-block;
-      padding: 6px 10px;
-    }
-
-    /* classy shine sweep across the tagline */
-    .sub::after{
-      content: "";
-      position: absolute;
-      top: 0;
-      left: -40%;
-      width: 35%;
-      height: 100%;
-      background: linear-gradient(90deg, transparent 0%, rgba(255,255,255,0.35) 50%, transparent 100%);
-      transform: skewX(-20deg);
-      animation: shine 4.5s ease-in-out infinite;
-      pointer-events: none;
-      filter: blur(1px);
-    }
-
-    @keyframes shine{
-      0%   { left: -45%; opacity: 0; }
-      15%  { opacity: 0.9; }
-      35%  { left: 110%; opacity: 0.0; }
-      100% { left: 110%; opacity: 0.0; }
-    }
-
-    /* small footer note (optional) */
-    .micro{
-      margin-top: 10px;
-      color: rgba(255,255,255,0.55);
-      font-size: 12px;
-      letter-spacing: 0.08em;
-      text-transform: uppercase;
-    }
-  </style>
-</head>
-
-<body>
-  <div class="bg-glow"></div>
-
-  <div class="wrap">
-    <div class="logo-frame">
-      <!-- IMPORTANT: file name must match exactly -->
-      <img src="bandit-logo.png" alt="Bandit Logo">
+      <div class="pill-row">
+        <span class="pill">Truck-Aware Intelligence</span>
+        <span class="pill">Voice-First</span>
+        <span class="pill">Safety-Minded</span>
+        <span class="pill">Built for the Road</span>
+      </div>
     </div>
 
-    <div class="badges">
-      <span class="badge">Pilot Program</span>
-      <span class="badge">Governed by Jericho</span>
+    <!-- Rotating Testimonial -->
+    <div class="panel">
+      <h3 class="panel-title small">Driver Notes (Pilot)</h3>
+
+      <div class="quote-box">
+        <div class="quote-mark">“</div>
+        <div id="quoteText" class="quote-text">Bandit kept me focused when my brain was cooked.</div>
+        <div class="quote-name" id="quoteName">— Pilot Driver</div>
+      </div>
+
+      <p class="panel-sub subtle">
+        (These rotate automatically — we’ll replace with real pilot quotes as they come in.)
+      </p>
     </div>
 
-    <div class="sub">TRUCK-AWARE CO-PILOT • COMING SOON</div>
-    <div class="micro">banditdriver.com</div>
+    <!-- Built For -->
+    <div class="panel">
+      <h3 class="panel-title small">Built for the real moments</h3>
+
+      <div class="cards">
+        <div class="card">
+          <div class="card-title">Long Runs</div>
+          <div class="card-text">Stay sharp. Reduce fatigue friction. Keep your head straight through the miles.</div>
+        </div>
+
+        <div class="card">
+          <div class="card-title">Decision Pressure</div>
+          <div class="card-text">Support when the clock is tight: calls, coordination, and next-step clarity.</div>
+        </div>
+
+        <div class="card">
+          <div class="card-title">Continuity</div>
+          <div class="card-text">Built to behave predictably and safely — governed systems, not chaos.</div>
+        </div>
+      </div>
+
+      <div class="cta-row">
+        <a class="cta-btn" href="mailto:pilot@banditdriver.com?subject=Bandit%20Pilot%20Program%20Request&body=Name%3A%0ACompany%3A%0ATruck%20Type%3A%0AHow%20many%20drivers%3A%0AWhat%20problem%20should%20Bandit%20solve%20first%3A%0A">
+          Request Pilot Access
+        </a>
+
+        <div class="cta-note">
+          <div class="cta-note-title">Pilot Program</div>
+          <div class="cta-note-sub">Limited slots • feedback-driven • governed by Jericho</div>
+        </div>
+      </div>
+    </div>
+
   </div>
-</body>
-</html> 
+</section>
+
+<style>
+  /* ===== Bandit sections styling (black + gold, calm) ===== */
+  .bandit-sections{
+    width: 100%;
+    max-width: 980px;
+    margin: 18px auto 0;
+    padding: 0 18px 28px;
+  }
+
+  .section-wrap{
+    display: grid;
+    gap: 14px;
+  }
+
+  .panel{
+    background: rgba(10,10,10,0.70);
+    border: 1px solid rgba(255,190,40,0.22);
+    border-radius: 16px;
+    padding: 16px 16px 14px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.25);
+    backdrop-filter: blur(6px);
+  }
+
+  .panel-title{
+    margin: 0 0 8px;
+    font-weight: 800;
+    letter-spacing: 0.2px;
+    color: #f5f5f5;
+    font-size: 20px;
+    line-height: 1.2;
+    text-transform: none;
+  }
+
+  .panel-title.small{
+    font-size: 16px;
+    letter-spacing: 0.6px;
+    text-transform: uppercase;
+    color: rgba(255,255,255,0.92);
+  }
+
+  .gold{
+    background: linear-gradient(180deg, #ffd86b 0%, #ffb400 50%, #c97b00 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    text-shadow: 0 1px 0 rgba(0,0,0,0.4);
+  }
+
+  .panel-sub{
+    margin: 0;
+    color: rgba(255,255,255,0.78);
+    font-size: 14px;
+    line-height: 1.45;
+  }
+
+  .panel-sub.subtle{
+    margin-top: 10px;
+    font-size: 12px;
+    color: rgba(255,255,255,0.55);
+  }
+
+  .pill-row{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    margin-top: 12px;
+  }
+
+  .pill{
+    display: inline-flex;
+    align-items: center;
+    padding: 7px 10px;
+    border-radius: 999px;
+    border: 1px solid rgba(255,190,40,0.28);
+    color: rgba(255,255,255,0.85);
+    font-size: 12px;
+    letter-spacing: 0.3px;
+    background: rgba(0,0,0,0.25);
+  }
+
+  .quote-box{
+    position: relative;
+    padding: 14px 14px 12px 38px;
+    border-radius: 14px;
+    border: 1px solid rgba(255,190,40,0.22);
+    background: rgba(0,0,0,0.28);
+    overflow: hidden;
+  }
+
+  .quote-mark{
+    position: absolute;
+    left: 12px;
+    top: 8px;
+    font-size: 28px;
+    font-weight: 900;
+    color: rgba(255,190,40,0.65);
+  }
+
+  .quote-text{
+    color: rgba(255,255,255,0.9);
+    font-size: 14px;
+    line-height: 1.45;
+    opacity: 1;
+    transition: opacity 420ms ease;
+  }
+
+  .quote-name{
+    margin-top: 8px;
+    font-size: 12px;
+    color: rgba(255,255,255,0.60);
+    letter-spacing: 0.3px;
+    opacity: 1;
+    transition: opacity 420ms ease;
+  }
+
+  .cards{
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0,1fr));
+    gap: 10px;
+    margin-top: 12px;
+  }
+
+  .card{
+    border-radius: 14px;
+    padding: 12px;
+    border: 1px solid rgba(255,190,40,0.18);
+    background: rgba(0,0,0,0.22);
+  }
+
+  .card-title{
+    font-weight: 800;
+    color: rgba(255,255,255,0.92);
+    font-size: 13px;
+    letter-spacing: 0.3px;
+    margin-bottom: 6px;
+  }
+
+  .card-text{
+    color: rgba(255,255,255,0.70);
+    font-size: 12px;
+    line-height: 1.4;
+  }
+
+  .cta-row{
+    display: flex;
+    gap: 12px;
+    align-items: center;
+    margin-top: 14px;
+    flex-wrap: wrap;
+  }
+
+  .cta-btn{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 11px 14px;
+    border-radius: 999px;
+    text-decoration: none;
+    font-weight: 900;
+    letter-spacing: 0.8px;
+    text-transform: uppercase;
+    border: 1px solid rgba(255,190,40,0.55);
+    background: linear-gradient(180deg, rgba(255,215,120,0.22), rgba(255,180,0,0.10));
+    color: rgba(255,215,120,0.95);
+    box-shadow: 0 10px 22px rgba(0,0,0,0.22);
+  }
+
+  .cta-btn:hover{
+    filter: brightness(1.08);
+    transform: translateY(-1px);
+  }
+
+  .cta-note{
+    min-width: 220px;
+    padding: 10px 12px;
+    border-radius: 14px;
+    border: 1px solid rgba(255,190,40,0.16);
+    background: rgba(0,0,0,0.18);
+  }
+
+  .cta-note-title{
+    font-size: 12px;
+    font-weight: 900;
+    text-transform: uppercase;
+    letter-spacing: 0.8px;
+    color: rgba(255,255,255,0.90);
+    margin-bottom: 3px;
+  }
+
+  .cta-note-sub{
+    font-size: 12px;
+    color: rgba(255,255,255,0.62);
+  }
+
+  @media (max-width: 860px){
+    .cards{ grid-template-columns: 1fr; }
+  }
+</style>
+
+<script>
+  // ===== Rotating "pilot" quotes (fade out/in) =====
+  (function(){
+    const quotes = [
+      { text: "Bandit kept me focused when my brain was cooked.", name: "— Pilot Driver" },
+      { text: "I stopped second-guessing my next move. That alone saved me time.", name: "— Owner-Operator" },
+      { text: "It’s calm. It doesn’t talk too much. It says what matters.", name: "— Pilot Driver" },
+      { text: "The ‘governed’ part is real — it feels stable, not random.", name: "— Pilot Driver" }
+    ];
+
+    const qText = document.getElementById("quoteText");
+    const qName = document.getElementById("quoteName");
+    if(!qText || !qName) return;
+
+    let i = 0;
+    setInterval(() => {
+      qText.style.opacity = 0;
+      qName.style.opacity = 0;
+
+      setTimeout(() => {
+        i = (i + 1) % quotes.length;
+        qText.textContent = quotes[i].text;
+        qName.textContent = quotes[i].name;
+
+        qText.style.opacity = 1;
+        qName.style.opacity = 1;
+      }, 420);
+    }, 3800);
+  })();
+</script>
+
+<!-- ===== END BANDIT: CONTENT SECTIONS ===== --> 
