--- a/index.html
+++ b/index.html
@@ -1,303 +1,154 @@
-<!-- ===== BANDIT: CONTENT SECTIONS (PASTE ABOVE </body>) ===== -->
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<section class="bandit-sections" aria-label="Bandit info sections">
-  <div class="section-wrap">
+<title>Bandit</title>
 
-    <!-- What Bandit Is -->
-    <div class="panel">
-      <h2 class="panel-title">Bandit is a <span class="gold">Truck-Aware Co-Pilot</span>.</h2>
-      <p class="panel-sub">
-        Built for real drivers. Calm, fast, and focused — designed to reduce mental load, help you move smarter,
-        and keep you in control. No hype. Just utility.
-      </p>
+<style>
 
-      <div class="pill-row">
-        <span class="pill">Truck-Aware Intelligence</span>
-        <span class="pill">Voice-First</span>
-        <span class="pill">Safety-Minded</span>
-        <span class="pill">Built for the Road</span>
-      </div>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: system-ui, -apple-system, Segoe UI, Roboto;
+  height: 100vh;
+  overflow: hidden;
+}
+
+/* FULLSCREEN BACKGROUND */
+.hero-bg {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-image: url('bandit-logo.png');
+  background-size: cover;
+  background-position: center;
+  filter: brightness(0.55) blur(1px);
+  z-index: -2;
+}
+
+/* FADE OVERLAY */
+.fade {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to right,
+    rgba(0,0,0,0.65),
+    rgba(0,0,0,0.25),
+    rgba(0,0,0,0.65)
+  );
+  z-index: -1;
+}
+
+/* MAIN LAYOUT */
+.container {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 8%;
+}
+
+/* SIDE PANEL */
+.panel {
+
+  width: 420px;
+
+  background: rgba(0,0,0,0.55);
+
+  backdrop-filter: blur(8px);
+
+  border-radius: 14px;
+
+  padding: 40px;
+
+  color: white;
+
+  box-shadow: 0 0 40px rgba(0,0,0,0.6);
+}
+
+/* TITLE */
+.title {
+  font-size: 42px;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+
+/* SUBTITLE */
+.subtitle {
+  font-size: 18px;
+  opacity: 0.85;
+  margin-bottom: 25px;
+}
+
+/* BULLETS */
+.features {
+  list-style: none;
+  margin-bottom: 30px;
+}
+
+.features li {
+  margin-bottom: 10px;
+  font-size: 16px;
+  opacity: 0.95;
+}
+
+/* JERICHO FOOTER */
+.jericho {
+  font-size: 14px;
+  opacity: 0.7;
+  margin-top: 20px;
+}
+
+</style>
+
+</head>
+
+<body>
+
+<div class="hero-bg"></div>
+
+<div class="fade"></div>
+
+<div class="container">
+
+  <div class="panel">
+
+    <div class="title">
+      Bandit
     </div>
 
-    <!-- Rotating Testimonial -->
-    <div class="panel">
-      <h3 class="panel-title small">Driver Notes (Pilot)</h3>
-
-      <div class="quote-box">
-        <div class="quote-mark">“</div>
-        <div id="quoteText" class="quote-text">Bandit kept me focused when my brain was cooked.</div>
-        <div class="quote-name" id="quoteName">— Pilot Driver</div>
-      </div>
-
-      <p class="panel-sub subtle">
-        (These rotate automatically — we’ll replace with real pilot quotes as they come in.)
-      </p>
+    <div class="subtitle">
+      Truck-Aware Co-Pilot
     </div>
 
-    <!-- Built For -->
-    <div class="panel">
-      <h3 class="panel-title small">Built for the real moments</h3>
+    <ul class="features">
 
-      <div class="cards">
-        <div class="card">
-          <div class="card-title">Long Runs</div>
-          <div class="card-text">Stay sharp. Reduce fatigue friction. Keep your head straight through the miles.</div>
-        </div>
+      <li>• Dispatch-Aware Intelligence</li>
 
-        <div class="card">
-          <div class="card-title">Decision Pressure</div>
-          <div class="card-text">Support when the clock is tight: calls, coordination, and next-step clarity.</div>
-        </div>
+      <li>• Broker Communication Ready</li>
 
-        <div class="card">
-          <div class="card-title">Continuity</div>
-          <div class="card-text">Built to behave predictably and safely — governed systems, not chaos.</div>
-        </div>
-      </div>
+      <li>• Fleet-Ready Architecture</li>
 
-      <div class="cta-row">
-        <a class="cta-btn" href="mailto:pilot@banditdriver.com?subject=Bandit%20Pilot%20Program%20Request&body=Name%3A%0ACompany%3A%0ATruck%20Type%3A%0AHow%20many%20drivers%3A%0AWhat%20problem%20should%20Bandit%20solve%20first%3A%0A">
-          Request Pilot Access
-        </a>
+      <li>• Voice-First Human Interface</li>
 
-        <div class="cta-note">
-          <div class="cta-note-title">Pilot Program</div>
-          <div class="cta-note-sub">Limited slots • feedback-driven • governed by Jericho</div>
-        </div>
-      </div>
+      <li>• Real-Time Operational Awareness</li>
+
+    </ul>
+
+    <div class="jericho">
+      Powered by Jericho
     </div>
 
   </div>
-</section>
 
-<style>
-  /* ===== Bandit sections styling (black + gold, calm) ===== */
-  .bandit-sections{
-    width: 100%;
-    max-width: 980px;
-    margin: 18px auto 0;
-    padding: 0 18px 28px;
-  }
+</div>
 
-  .section-wrap{
-    display: grid;
-    gap: 14px;
-  }
-
-  .panel{
-    background: rgba(10,10,10,0.70);
-    border: 1px solid rgba(255,190,40,0.22);
-    border-radius: 16px;
-    padding: 16px 16px 14px;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.25);
-    backdrop-filter: blur(6px);
-  }
-
-  .panel-title{
-    margin: 0 0 8px;
-    font-weight: 800;
-    letter-spacing: 0.2px;
-    color: #f5f5f5;
-    font-size: 20px;
-    line-height: 1.2;
-    text-transform: none;
-  }
-
-  .panel-title.small{
-    font-size: 16px;
-    letter-spacing: 0.6px;
-    text-transform: uppercase;
-    color: rgba(255,255,255,0.92);
-  }
-
-  .gold{
-    background: linear-gradient(180deg, #ffd86b 0%, #ffb400 50%, #c97b00 100%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    text-shadow: 0 1px 0 rgba(0,0,0,0.4);
-  }
-
-  .panel-sub{
-    margin: 0;
-    color: rgba(255,255,255,0.78);
-    font-size: 14px;
-    line-height: 1.45;
-  }
-
-  .panel-sub.subtle{
-    margin-top: 10px;
-    font-size: 12px;
-    color: rgba(255,255,255,0.55);
-  }
-
-  .pill-row{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-    margin-top: 12px;
-  }
-
-  .pill{
-    display: inline-flex;
-    align-items: center;
-    padding: 7px 10px;
-    border-radius: 999px;
-    border: 1px solid rgba(255,190,40,0.28);
-    color: rgba(255,255,255,0.85);
-    font-size: 12px;
-    letter-spacing: 0.3px;
-    background: rgba(0,0,0,0.25);
-  }
-
-  .quote-box{
-    position: relative;
-    padding: 14px 14px 12px 38px;
-    border-radius: 14px;
-    border: 1px solid rgba(255,190,40,0.22);
-    background: rgba(0,0,0,0.28);
-    overflow: hidden;
-  }
-
-  .quote-mark{
-    position: absolute;
-    left: 12px;
-    top: 8px;
-    font-size: 28px;
-    font-weight: 900;
-    color: rgba(255,190,40,0.65);
-  }
-
-  .quote-text{
-    color: rgba(255,255,255,0.9);
-    font-size: 14px;
-    line-height: 1.45;
-    opacity: 1;
-    transition: opacity 420ms ease;
-  }
-
-  .quote-name{
-    margin-top: 8px;
-    font-size: 12px;
-    color: rgba(255,255,255,0.60);
-    letter-spacing: 0.3px;
-    opacity: 1;
-    transition: opacity 420ms ease;
-  }
-
-  .cards{
-    display: grid;
-    grid-template-columns: repeat(3, minmax(0,1fr));
-    gap: 10px;
-    margin-top: 12px;
-  }
-
-  .card{
-    border-radius: 14px;
-    padding: 12px;
-    border: 1px solid rgba(255,190,40,0.18);
-    background: rgba(0,0,0,0.22);
-  }
-
-  .card-title{
-    font-weight: 800;
-    color: rgba(255,255,255,0.92);
-    font-size: 13px;
-    letter-spacing: 0.3px;
-    margin-bottom: 6px;
-  }
-
-  .card-text{
-    color: rgba(255,255,255,0.70);
-    font-size: 12px;
-    line-height: 1.4;
-  }
-
-  .cta-row{
-    display: flex;
-    gap: 12px;
-    align-items: center;
-    margin-top: 14px;
-    flex-wrap: wrap;
-  }
-
-  .cta-btn{
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    padding: 11px 14px;
-    border-radius: 999px;
-    text-decoration: none;
-    font-weight: 900;
-    letter-spacing: 0.8px;
-    text-transform: uppercase;
-    border: 1px solid rgba(255,190,40,0.55);
-    background: linear-gradient(180deg, rgba(255,215,120,0.22), rgba(255,180,0,0.10));
-    color: rgba(255,215,120,0.95);
-    box-shadow: 0 10px 22px rgba(0,0,0,0.22);
-  }
-
-  .cta-btn:hover{
-    filter: brightness(1.08);
-    transform: translateY(-1px);
-  }
-
-  .cta-note{
-    min-width: 220px;
-    padding: 10px 12px;
-    border-radius: 14px;
-    border: 1px solid rgba(255,190,40,0.16);
-    background: rgba(0,0,0,0.18);
-  }
-
-  .cta-note-title{
-    font-size: 12px;
-    font-weight: 900;
-    text-transform: uppercase;
-    letter-spacing: 0.8px;
-    color: rgba(255,255,255,0.90);
-    margin-bottom: 3px;
-  }
-
-  .cta-note-sub{
-    font-size: 12px;
-    color: rgba(255,255,255,0.62);
-  }
-
-  @media (max-width: 860px){
-    .cards{ grid-template-columns: 1fr; }
-  }
-</style>
-
-<script>
-  // ===== Rotating "pilot" quotes (fade out/in) =====
-  (function(){
-    const quotes = [
-      { text: "Bandit kept me focused when my brain was cooked.", name: "— Pilot Driver" },
-      { text: "I stopped second-guessing my next move. That alone saved me time.", name: "— Owner-Operator" },
-      { text: "It’s calm. It doesn’t talk too much. It says what matters.", name: "— Pilot Driver" },
-      { text: "The ‘governed’ part is real — it feels stable, not random.", name: "— Pilot Driver" }
-    ];
-
-    const qText = document.getElementById("quoteText");
-    const qName = document.getElementById("quoteName");
-    if(!qText || !qName) return;
-
-    let i = 0;
-    setInterval(() => {
-      qText.style.opacity = 0;
-      qName.style.opacity = 0;
-
-      setTimeout(() => {
-        i = (i + 1) % quotes.length;
-        qText.textContent = quotes[i].text;
-        qName.textContent = quotes[i].name;
-
-        qText.style.opacity = 1;
-        qName.style.opacity = 1;
-      }, 420);
-    }, 3800);
-  })();
-</script>
-
-<!-- ===== END BANDIT: CONTENT SECTIONS ===== --> 
+</body>
+</html> 
