--- a/index.html
+++ b/index.html
@@ -1,155 +1,142 @@
-
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>Bandit</title>
-
 <style>
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+/* RESET */
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
 }
 
-body {
-  font-family: system-ui, -apple-system, Segoe UI, Roboto;
-  height: 100vh;
-  overflow: hidden;
+/* ROOT COLORS */
+:root{
+  --gold:#f6b300;
+  --gold2:#ffd36a;
+  --glass:rgba(18,18,22,0.55);
+  --stroke:rgba(255,214,120,0.25);
 }
 
-/* FULLSCREEN BACKGROUND */
-.hero-bg {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-image: url('bandit-logo.png');
-  background-size: cover;
-  background-position: center;
-  filter: brightness(0.55) blur(1px);
-  z-index: -2;
+/* BODY */
+body{
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  height:100vh;
+  overflow:hidden;
+}
+
+/* FULL BACKGROUND IMAGE */
+.bg{
+  position:fixed;
+  width:100%;
+  height:100%;
+  background-image:url("bandit-logo.png");
+  background-size:cover;
+  background-position:center left;
+  filter:brightness(0.65) blur(2px);
+  z-index:-2;
 }
 
 /* FADE OVERLAY */
-.fade {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(
+.fade{
+  position:fixed;
+  width:100%;
+  height:100%;
+  background:linear-gradient(
     to right,
-    rgba(0,0,0,0.65),
-    rgba(0,0,0,0.25),
+    rgba(0,0,0,0.1),
+    rgba(0,0,0,0.35),
     rgba(0,0,0,0.65)
   );
-  z-index: -1;
+  z-index:-1;
 }
 
-/* MAIN LAYOUT */
-.container {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  padding-right: 8%;
+/* MAIN CONTAINER */
+.container{
+  height:100%;
+  display:flex;
+  align-items:center;
+  justify-content:flex-end;
+  padding-right:6%;
 }
 
-/* SIDE PANEL */
-.panel {
+/* INFO CARD */
+.card{
+  width:380px;
+  padding:32px;
+  border-radius:18px;
 
-  width: 420px;
+  border:1px solid var(--stroke);
 
-  background: rgba(0,0,0,0.55);
+  background:linear-gradient(
+    180deg,
+    rgba(18,18,22,0.62),
+    rgba(18,18,22,0.42)
+  );
 
-  backdrop-filter: blur(8px);
+  backdrop-filter:blur(14px);
 
-  border-radius: 14px;
+  color:white;
 
-  padding: 40px;
-
-  color: white;
-
-  box-shadow: 0 0 40px rgba(0,0,0,0.6);
+  box-shadow:
+  0 10px 30px rgba(0,0,0,0.45);
 }
 
 /* TITLE */
-.title {
-  font-size: 42px;
-  font-weight: 700;
-  margin-bottom: 8px;
+.card h1{
+  font-size:34px;
+  margin-bottom:6px;
+  color:var(--gold2);
 }
 
 /* SUBTITLE */
-.subtitle {
-  font-size: 18px;
-  opacity: 0.85;
-  margin-bottom: 25px;
+.card h2{
+  font-size:16px;
+  font-weight:500;
+  margin-bottom:18px;
+  color:rgba(255,255,255,0.85);
 }
 
-/* BULLETS */
-.features {
-  list-style: none;
-  margin-bottom: 30px;
+/* LIST */
+.card ul{
+  list-style:disc;
+  padding-left:20px;
 }
 
-.features li {
-  margin-bottom: 10px;
-  font-size: 16px;
-  opacity: 0.95;
+.card li{
+  margin-bottom:10px;
+  font-size:15px;
 }
 
-/* JERICHO FOOTER */
-.jericho {
-  font-size: 14px;
-  opacity: 0.7;
-  margin-top: 20px;
+.card li::marker{
+  color:var(--gold);
 }
 
-</style>
+/* POWERED BY */
+.powered{
+  margin-top:18px;
+  font-size:12px;
+  color:rgba(255,255,255,0.75);
+}
 
-</head>
+.powered b{
+  color:var(--gold2);
+}
 
-<body>
+/* OPTIONAL BADGE */
+.badge{
+  display:inline-block;
+  padding:8px 14px;
+  margin-bottom:12px;
 
-<div class="hero-bg"></div>
+  border-radius:999px;
 
-<div class="fade"></div>
+  border:1px solid rgba(246,179,0,0.35);
 
-<div class="container">
+  background:rgba(246,179,0,0.10);
 
-  <div class="panel">
+  color:var(--gold2);
 
-    <div class="title">
-      Bandit
-    </div>
+  font-weight:700;
+  font-size:11px;
+  letter-spacing:1px;
+}
 
-    <div class="subtitle">
-      Truck-Aware Co-Pilot
-    </div>
-
-    <ul class="features">
-
-      <li>• Dispatch-Aware Intelligence</li>
-
-      <li>• Broker Communication Ready</li>
-
-      <li>• Fleet-Ready Architecture</li>
-
-      <li>• Voice-First Human Interface</li>
-
-      <li>• Real-Time Operational Awareness</li>
-
-    </ul>
-
-    <div class="jericho">
-      Powered by Jericho
-    </div>
-
-  </div>
-
-</div>
-
-</body>
-</html> 
+</style> 
