--- a/index.html
+++ b/index.html
@@ -1,154 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Bandit</title>
 
-<style>
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: system-ui, -apple-system, Segoe UI, Roboto;
-  height: 100vh;
-  overflow: hidden;
-}
-
-/* FULLSCREEN BACKGROUND */
-.hero-bg {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-image: url('bandit-logo.png');
-  background-size: cover;
-  background-position: center;
-  filter: brightness(0.55) blur(1px);
-  z-index: -2;
-}
-
-/* FADE OVERLAY */
-.fade {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(
-    to right,
-    rgba(0,0,0,0.65),
-    rgba(0,0,0,0.25),
-    rgba(0,0,0,0.65)
-  );
-  z-index: -1;
-}
-
-/* MAIN LAYOUT */
-.container {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  padding-right: 8%;
-}
-
-/* SIDE PANEL */
-.panel {
-
-  width: 420px;
-
-  background: rgba(0,0,0,0.55);
-
-  backdrop-filter: blur(8px);
-
-  border-radius: 14px;
-
-  padding: 40px;
-
-  color: white;
-
-  box-shadow: 0 0 40px rgba(0,0,0,0.6);
-}
-
-/* TITLE */
-.title {
-  font-size: 42px;
-  font-weight: 700;
-  margin-bottom: 8px;
-}
-
-/* SUBTITLE */
-.subtitle {
-  font-size: 18px;
-  opacity: 0.85;
-  margin-bottom: 25px;
-}
-
-/* BULLETS */
-.features {
-  list-style: none;
-  margin-bottom: 30px;
-}
-
-.features li {
-  margin-bottom: 10px;
-  font-size: 16px;
-  opacity: 0.95;
-}
-
-/* JERICHO FOOTER */
-.jericho {
-  font-size: 14px;
-  opacity: 0.7;
-  margin-top: 20px;
-}
-
-</style>
+<link rel="stylesheet" href="style.css?v=2">
 
 </head>
-
 <body>
 
-<div class="hero-bg"></div>
+<!-- Background image -->
+<div class="bg"></div>
 
+<!-- Fade overlay -->
 <div class="fade"></div>
 
+<!-- Main container -->
 <div class="container">
 
-  <div class="panel">
+    <div class="card">
 
-    <div class="title">
-      Bandit
-    </div>
+        <h1>Bandit</h1>
 
-    <div class="subtitle">
-      Truck-Aware Co-Pilot
-    </div>
+        <h2>Truck-Aware Co-Pilot</h2>
 
-    <ul class="features">
+        <ul>
+            <li>Dispatch-Aware Intelligence</li>
+            <li>Broker Communication Ready</li>
+            <li>Fleet-Ready Architecture</li>
+            <li>Voice-First Human Interface</li>
+            <li>Real-Time Operational Awareness</li>
+        </ul>
 
-      <li>• Dispatch-Aware Intelligence</li>
-
-      <li>• Broker Communication Ready</li>
-
-      <li>• Fleet-Ready Architecture</li>
-
-      <li>• Voice-First Human Interface</li>
-
-      <li>• Real-Time Operational Awareness</li>
-
-    </ul>
-
-    <div class="jericho">
-      Powered by Jericho
-    </div>
-
-  </div>
-
-</div>
-
-</body>
-</html> 
+        <div class="powered">
+            Powered by Jericho
+        </ 
